# rip

./: .gitignore  .ripconfig.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  postinstall.js  rip.js
.github/workflows/: release.yml
TODO/: CLIPPY.md  MISSED-GOALS.md  NEXT-STEPS.md  PLANS.md  PROJECT-IDEA.md  THOUGHTS.md  WORK.md
art/: rip-logo.txt  rip-skull-logo.txt
md/: ARCHITECTURE.md  IMPLEMENTATION-STATUS.md  ORIGINAL-PROPOSAL.md  PROJECT-REQUIREMENTS.md  architecture-overview.md  development-history.md  mvp-implementation.md
src/: cli.rs  config.rs  main.rs  scanner.rs  tui.rs  web_scanner.rs
tests/: integration_tests.rs
