[package]
name = "rip"
version = "0.3.0-alpha.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dialoguer = { version = "0.11", features = ["completion"] }
indicatif = "0.17"
colored = "2.0"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
mockito = "1.4"
tokio-test = "0.4"
